<resources>
    <string name="app_name">Mesa News</string>
    <string name="title_menu_feed">FEED</string>
    <string name="title_menu_filter">FILTER</string>
    <string name="title_login">Mesa News</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="signin">signin</string>
    <string name="signup">signup</string>

    <string name="facebook_app_id">1263917790673448</string>
    <string name="fb_login_protocol_scheme">fb1263917790673448</string>
    <string name="name">Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="birthday">Birthday (xx/xx/xxxx)</string>
    <string name="register">Register</string>
    <string name="highlights">Highlights</string>
    <string name="news">News</string>

    <string name="btn_favor">add fav</string>
    <string name="btn_disfavor">remove fav</string>
    <string name="favorites">Favorites</string>

</resources>
