<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.register.RegisterActivity">

    <ProgressBar
        android:id="@+id/progress_bar_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:visibility="invisible"
        android:layout_gravity="center_vertical|center_horizontal"/>

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="30dp"
        android:inputType="text"
        android:backgroundTint="@color/colorPrimary"
        android:imeOptions="actionNext"
        android:hint="@string/name"/>

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/colorPrimary"
        android:imeOptions="actionNext"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPassword"
        android:backgroundTint="@color/colorPrimary"
        android:imeOptions="actionNext"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="textPassword"
        android:backgroundTint="@color/colorPrimary"
        android:imeOptions="actionNext"
        android:hint="@string/confirm_password"/>

    <EditText
        android:id="@+id/et_birthday"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:inputType="date"
        android:backgroundTint="@color/colorPrimary"
        android:imeOptions="actionDone"
        android:hint="@string/birthday"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/register"
        android:textAllCaps="true"
        android:textSize="18sp"
        android:background="@color/colorPrimaryLight"
        android:textColor="@color/colorAccent"/>

</LinearLayout>