<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity">

    <EditText
        android:id="@+id/et_email"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:backgroundTint="@color/colorPrimary"
        android:hint="@string/email"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/et_password"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:imeOptions="actionDone"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@id/et_email"
        app:layout_constraintTop_toBottomOf="@id/et_email"/>

    <TextView
        android:id="@+id/tv_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup"
        android:textColor="@color/colorPrimary"
        android:textSize="16sp"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintEnd_toEndOf="@id/et_password"
        android:padding="15dp"/>

    <Button
        android:id="@+id/btn_signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signin"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:textColor="@color/colorAccent"
        android:background="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="@id/et_email"
        app:layout_constraintTop_toBottomOf="@id/tv_signup"
        app:layout_constraintEnd_toEndOf="@id/et_email"/>

    <com.facebook.login.widget.LoginButton
        android:id="@+id/btn_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        app:layout_constraintTop_toBottomOf="@id/btn_signin"
        app:layout_constraintStart_toStartOf="@id/btn_signin"
        app:layout_constraintEnd_toEndOf="@id/btn_signin"/>

</androidx.constraintlayout.widget.ConstraintLayout>